# RediSearch

./: CMakeLists.txt
src/: debug_commads.c  doc_table.c  document.c  document.h  document_add.c  document_basic.c  field_spec.h  highlight_processor.c  index.c  index_result.h  indexer.c  json.c  json.h  module.c  notifications.c  numeric_filter.c  numeric_filter.h  numeric_index.c  numeric_index.h  query.c  redisearch_api.c  rejson_api.h  result_processor.c  result_processor.h  rlookup.c  rules.c  rules.h  search_options.h  spec.c  spec.h  value.c
src/aggregate/: aggregate.h  aggregate_exec.c  aggregate_request.c
src/util/: arr.h
tests/ci.benchmarks/: reads-small-dataset.yml  requirements.txt
tests/cpptests/: test_cpp_document.cpp  test_cpp_range.cpp
tests/pytests/: test.py  test_aggregate.py  test_followhashes.py  test_json.py  test_numbers.py
tests/so_tests/: CMakeLists.txt  Makefile  test_module.c
tests/testmod/: CMakeLists.txt
