ADD_LIBRARY(testmod SHARED test_module.c)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../../src)

SET_TARGET_PROPERTIES(testmod PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(testmod PROPERTIES SUFFIX ".so") 

IF (APPLE)
    SET_TARGET_PROPERTIES(testmod PROPERTIES LINK_FLAGS "-undefined dynamic_lookup")
ENDIF() 
